--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,6 +37,7 @@ subjects:
 - !lcc 'PS'
 - !lcc 'HX'
 - !lcsh 'Science fiction'
+- GITenberg
 title: Equality
 url: http://www.gutenberg.org/ebooks/7303
 wikipedia:
